# aube

./: .gitattributes  .gitignore  .rules  CLAUDE.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  aube.usage.kdl  mise.toml  release.json
.github/: actionlint.yaml
.github/workflows/: autofix.yml  bench-pr.yml  bench-refresh.yml  ci.yml  copr-publish.yml  docs.yml  ppa-publish.yml  publish-homebrew.yml  publish-npm.yml  release-plz.yml  release.yml  semantic-pr-lint.yml
benchmarks/: bench.sh  generate-phase-results.mjs  generate-results.js  hermetic.bash  results.json  throttle-proxy.mjs
benchmarks/registry/: config.warm.yaml  config.yaml
crates/aube-cli/: Cargo.toml
crates/aube-codes/: CHANGELOG.md  Cargo.toml
crates/aube-codes/src/: errors.rs  exit.rs  lib.rs  warnings.rs
crates/aube-linker/: CHANGELOG.md  Cargo.toml
crates/aube-lockfile/: CHANGELOG.md  Cargo.toml
crates/aube-manifest/: CHANGELOG.md  Cargo.toml
crates/aube-registry/: CHANGELOG.md  Cargo.toml
crates/aube-registry/src/: client.rs  config.rs  jsr.rs  lib.rs
crates/aube-resolver/: CHANGELOG.md  Cargo.toml  build.rs
crates/aube-scripts/: CHANGELOG.md  Cargo.toml
crates/aube-settings/: CHANGELOG.md  Cargo.toml  build.rs  settings.toml
crates/aube-settings/src/: meta.rs
crates/aube-store/: CHANGELOG.md  Cargo.toml
docs/: .gitignore  benchmarks.md  bun-users.md  error-codes.data.json  error-codes.data.ts  error-codes.md  installation.md  npm-users.md  package.json  pnpm-users.md  security.md  yarn-users.md
scripts/: generate-primer.mjs
test/: PNPM_TEST_IMPORT.md  add.bats  approve_builds.bats  audit.bats  catalogs.bats  global_install.bats  guardrails.bats  install.bats  lifecycle_scripts.bats  lockfile_dir.bats  optional_platform.bats  pack.bats  peer_deps.bats  pnpm_install_hooks.bats  pnpm_install_misc.bats  pnpm_install_misc_slow.bats  pnpm_monorepo_index.bats  pnpm_update.bats  pnpm_update_slow.bats  pnpmfile.bats  public_hoist_pattern.bats  publish.bats  remove.bats  run.bats  store.bats  version.bats  workspace.bats
(+204 files in other folders)
