[package]
name = "aube-codes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Stable error and warning code identifiers shared across the aube workspace."

[[bin]]
name = "generate-error-codes-docs"
path = "src/bin/generate_error_codes_docs.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
